salesforce-twitter integration task/force-app/main/default/objects/LinkedIn_Post__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LinkedIn Posts</relationshipLabel>
    <relationshipName>LinkedIn_Posts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>