salesforce-twitter integration task/force-app/main/default/objects/LinkedIn_Post__c/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <label>Post Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>