salesforce-twitter integration task/force-app/main/default/objects/LinkedIn_Post__c/fields/Post_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_ID__c</fullName>
    <label>Post ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>