salesforce-twitter integration task/force-app/main/default/objects/LinkedIn_Post__c/fields/Post_Text__c.field-meta.xml
<CustomField>
    <fullName>Post_Text__c</fullName>
    <label>Post Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>